--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 
 <body>
 
-  <!-- PLANO DE FUNDO: GIF DA CYNTHIA -->
+  <!-- PLANO DE FUNDO: GIF DA CYNTHIA (entre as faixas vermelha e preta) -->
   <div class="fundo-cinthya"></div>
 
   <!-- Cabeçalho -->
   <header>
+    <div class="faixa-vermelha"></div>
     <h2>Pokémon IFPR</h2>
     <nav>
       <a href="index.html">Início</a>
       <a href="regioes.html">Regiões</a>
       <a href="pokedex.html">Pokedex</a>
-      <a href="planilha.html">Pokemons Pesquisados</a>
+      <a href="planilha.html"> Pokémons Pesquisados</a>
     </nav>
+    <div class="faixa-preta"></div>
   </header>
 
   <!-- Conteúdo principal -->
@@ -34,6 +36,7 @@
     </div>
   </main>
 
+  <!-- Rodapé -->
   <footer>
     <p>&copy; 2025 Pokémon IFPR - Todos os direitos reservados.</p>
   </footer>
@@ -41,31 +44,57 @@
   <style>
     /* === PLANO DE FUNDO COM GIF DA CYNTHIA === */
     .fundo-cinthya {
-      position: fixed;
-      top: 0;
+      position: absolute;
+      top: 60px; /* posicionado entre as faixas */
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 300px;
       background: url("https://media1.tenor.com/m/BjI5K2TSw98AAAAd/cinthya-pokemon.gif") center center / cover no-repeat;
-      filter: brightness(0.4) blur(4px);
-      z-index: -1;
+      filter: brightness(0.6) saturate(1.2);
+      z-index: 0;
+      border-top: 5px solid #d00000; /* linha vermelha superior */
+      border-bottom: 5px solid #000;  /* linha preta inferior */
     }
 
     /* Cabeçalho */
     header {
+      position: relative;
       text-align: center;
-      padding: 15px 0;
-      background-color: rgba(0, 0, 0, 0.5);
       color: white;
+      z-index: 10;
+    }
+
+    .faixa-vermelha {
+      background-color: #d00000;
+      height: 20px;
+      width: 100%;
+    }
+
+    .faixa-preta {
+      background-color: #000;
+      height: 20px;
+      width: 100%;
+    }
+
+    header h2 {
+      margin: 10px 0;
+      font-size: 2em;
+      text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+    }
+
+    nav {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 8px 0;
       position: sticky;
       top: 0;
-      backdrop-filter: blur(8px);
+      z-index: 20;
+      backdrop-filter: blur(5px);
     }
 
     nav a {
       color: #fff;
       text-decoration: none;
-      margin: 0 10px;
+      margin: 0 12px;
       font-weight: bold;
       transition: color 0.3s;
     }
@@ -75,6 +104,12 @@
     }
 
     /* === GRADE DE POKÉMON === */
+    main {
+      position: relative;
+      z-index: 5;
+      padding-top: 380px; /* garante que os Pokémon fiquem abaixo do GIF */
+    }
+
     #conteudo {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -105,6 +140,23 @@
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s, box-shadow 0.3s;
       width: 300px;
+      animation: aparecer 0.8s ease forwards;
+      opacity: 0;
+    }
+
+    .bloco-item:nth-child(1) { animation-delay: 0.1s; }
+    .bloco-item:nth-child(2) { animation-delay: 0.2s; }
+    .bloco-item:nth-child(3) { animation-delay: 0.3s; }
+
+    @keyframes aparecer {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .bloco-item:hover {
@@ -113,8 +165,8 @@
     }
 
     .bloco-item img {
-      width: 220px;
-      height: 220px;
+      width: 230px;
+      height: 230px;
       object-fit: contain;
       transition: transform 0.3s;
       filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.5));
@@ -127,7 +179,7 @@
     .pokemon-nome {
       font-weight: bold;
       margin-top: 10px;
-      font-size: 1.3em;
+      font-size: 1.4em;
       color: #fff;
       text-shadow: 0 0 6px rgba(0, 0, 0, 0.7);
     }
@@ -153,7 +205,6 @@
       text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
     }
 
-    /* Rodapé */
     footer {
       text-align: center;
       padding: 10px;
