--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
 
-  <!-- PLANO DE FUNDO: GIF DA CYNTHIA (entre as faixas vermelha e preta) -->
-  <div class="fundo-cinthya"></div>
-
-  <!-- Cabeçalho -->
+  <!-- Faixas topo -->
   <header>
     <div class="faixa-vermelha"></div>
+    <div class="faixa-preta"></div>
     <h2>Pokémon IFPR</h2>
     <nav>
       <a href="index.html">Início</a>
       <a href="regioes.html">Regiões</a>
       <a href="pokedex.html">Pokedex</a>
-      <a href="planilha.html"> Pokémons Pesquisados</a>
+      <a href="planilha.html">Pokémons Pesquisados</a>
     </nav>
-    <div class="faixa-preta"></div>
   </header>
+
+  <!-- GIF da Cynthia entre faixas -->
+  <div class="fundo-cinthya"></div>
 
   <!-- Conteúdo principal -->
   <main>
@@ -36,34 +36,12 @@
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer>
     <p>&copy; 2025 Pokémon IFPR - Todos os direitos reservados.</p>
   </footer>
 
   <style>
-    /* === PLANO DE FUNDO COM GIF DA CYNTHIA === */
-    .fundo-cinthya {
-      position: absolute;
-      top: 60px; /* posicionado entre as faixas */
-      left: 0;
-      width: 100%;
-      height: 300px;
-      background: url("https://media1.tenor.com/m/BjI5K2TSw98AAAAd/cinthya-pokemon.gif") center center / cover no-repeat;
-      filter: brightness(0.6) saturate(1.2);
-      z-index: 0;
-      border-top: 5px solid #d00000; /* linha vermelha superior */
-      border-bottom: 5px solid #000;  /* linha preta inferior */
-    }
-
-    /* Cabeçalho */
-    header {
-      position: relative;
-      text-align: center;
-      color: white;
-      z-index: 10;
-    }
-
+    /* === FAIXAS TOPO === */
     .faixa-vermelha {
       background-color: #d00000;
       height: 20px;
@@ -74,6 +52,13 @@
       background-color: #000;
       height: 20px;
       width: 100%;
+    }
+
+    header {
+      position: relative;
+      z-index: 10;
+      text-align: center;
+      color: white;
     }
 
     header h2 {
@@ -103,13 +88,33 @@
       color: #ffcc00;
     }
 
-    /* === GRADE DE POKÉMON === */
-    main {
-      position: relative;
-      z-index: 5;
-      padding-top: 380px; /* garante que os Pokémon fiquem abaixo do GIF */
+    /* === GIF CYNTHIA === */
+    .fundo-cinthya {
+      position: absolute;
+      top: 20px; /* abaixo da faixa vermelha */
+      left: 0;
+      width: 100%;
+      height: 120px; /* altura entre faixas */
+      background: url("https://media1.tenor.com/m/BjI5K2TSw98AAAAd/cinthya-pokemon.gif") center center / contain no-repeat;
+      z-index: 1;
+      pointer-events: none;
+      filter: brightness(0.8) saturate(1.1);
     }
 
+    /* === CONTEÚDO PRINCIPAL === */
+    main {
+      padding-top: 180px; /* garante que Pokémon fiquem abaixo do GIF */
+      position: relative;
+      z-index: 5;
+    }
+
+    h1, p {
+      text-align: center;
+      color: white;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    }
+
+    /* === GRADE DE POKÉMON === */
     #conteudo {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -130,7 +135,7 @@
       }
     }
 
-    /* === BLOCO DOS POKÉMONS === */
+    /* === BLOCO POKÉMON === */
     .bloco-item {
       background: rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(10px);
@@ -149,14 +154,8 @@
     .bloco-item:nth-child(3) { animation-delay: 0.3s; }
 
     @keyframes aparecer {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .bloco-item:hover {
@@ -212,11 +211,6 @@
       background: rgba(0, 0, 0, 0.5);
     }
 
-    h1, p {
-      text-align: center;
-      color: white;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    }
   </style>
 
   <script>
