--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 
   <!-- CONTEÚDO PRINCIPAL -->
   <main>
-    <!-- GIF da Cynthia como fundo -->
-    <div class="fundo-cinthya"></div>
-
     <h1>Pokémon IFPR</h1>
     <p>"Gotta Catch 'Em All!"</p>
 
@@ -35,6 +32,11 @@
       <p>Carregando conteúdo...</p>
     </div>
   </main>
+
+  <!-- GIF quadrado flutuante -->
+  <div class="gif-cinthya">
+    <img src="https://media1.tenor.com/m/BjI5K2TSw98AAAAd/cinthya-pokemon.gif" alt="Cinthya Pokémon">
+  </div>
 
   <footer>
     <p>&copy; 2025 Pokémon IFPR - Todos os direitos reservados.</p>
@@ -88,23 +90,11 @@
       color: #ffcc00;
     }
 
-    /* === GIF DA CYNTHIA ATRÁS DOS POKÉMON === */
-    .fundo-cinthya {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 180px; /* altura do GIF */
-      background: url("https://media1.tenor.com/m/BjI5K2TSw98AAAAd/cinthya-pokemon.gif") center center / cover no-repeat;
-      z-index: 0; /* atrás do conteúdo */
-      pointer-events: none;
-      filter: brightness(0.6) saturate(1.1);
-    }
-
+    /* === CONTEÚDO PRINCIPAL === */
     main {
       position: relative;
-      z-index: 1;
-      padding-top: 200px; /* garante que Pokémon fiquem abaixo do topo/GIF */
+      z-index: 1; /* Pokémon acima do fundo */
+      padding-top: 40px;
     }
 
     h1, p {
@@ -208,6 +198,43 @@
       padding: 10px;
       color: white;
       background: rgba(0, 0, 0, 0.5);
+    }
+
+    /* === GIF FLUTUANTE === */
+    .gif-cinthya {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      width: 240px;
+      height: 240px;
+      z-index: 50; /* acima de todos */
+      pointer-events: none;
+      animation: flutuar 3s ease-in-out infinite;
+    }
+
+    .gif-cinthya img {
+      width: 100%;
+      height: 100%;
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
+      transition: transform 0.3s, box-shadow 0.3s;
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      filter: contrast(1.05) saturate(1.1);
+    }
+
+    @keyframes flutuar {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-12px); }
+    }
+
+    @media (max-width: 600px) {
+      .gif-cinthya {
+        width: 180px;
+        height: 180px;
+        bottom: 15px;
+        right: 15px;
+      }
     }
   </style>
 
