--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@ async function carregarConteudo() {
 }
 
 carregarConteudo();
-<script>
+</script>
+
+    <script>
   const toggle = document.getElementById("tema-toggle");
   const body = document.body;
 
